feat: module 2 - ...nodejs server

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "lint-staged": {
     "**/*.{js,jsx}": [
-      "npx prettier --write",
-      "npx eslint --fix"
+      "npx eslint --fix",
+      "npx prettier --write"
     ]
   }
 }
