--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "nodemon src/index.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "lint": "eslint src"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
+    "nodemon": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
