--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "hello-codespace-cs618",
+  "name": "hello-codespace-cs618-backend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "lint": "eslint src"
   },
